--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,16 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// Mixins
+@mixin media-md {
+    @media only screen and (max-width: 1100px) {
+        @content;
+    }
+}
+
+@mixin media-lg {
+    @media only screen and (min-width: 1101px) {
+        @content
+    }
+}
